syntax = "proto3";

option go_package = "gihyo/catalogue/proto/book";

package book;

import "google/protobuf/empty.proto";

// GetBookRequestを受け取り、GetBookResponseを返すCatalogueサービス

service Catalogue {
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {};
    rpc ListBooks (google.protobuf.Empty) returns (ListBooksResponse) {};
}

// idを含むリクエスト
message GetBookRequest {
    int32 bookId = 1;
}

// Bookを含むレスポンス
message GetBookResponse {
    Book book = 1;
}

message ListBooksResponse {
    repeated Book books = 1;
}

message Book {
    int32 bookId = 1;
    string title = 2;
    string author = 3;
    int32 price = 4;
}